<resources>
    <string name="app_name">Study</string>
    <!-- general -->
    <string name="error_network">Loading failed, please check your network.</string>

    <!-- main -->
    <string name="main_login_info">Please login first</string>
    <string name="main_info">Welcome! </string>
    <string name="no_authority">Only teachers can access this page :-(</string>
    <!-- login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_email_hint">Enter username here</string>
    <string name="login_password_hint">Your password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="login_forget">Forget password?</string>
    <string name="login_toast1">A username already exists</string>
    <string name="login_fail_toast">Email, password is wrong or the account is already logged in</string>

    <string name="login_otherType">Login with Google account</string>
    <string name="login_otherCancel">SIGN IN CANCELLED</string>
    <string name="login_fail">Login failed, please check your identifications</string>
    <!-- login reset -->
    <string name="login_reset_title">New password</string>
    <string name="login_reset_title_r">Repeat password</string>
    <string name="login_reset_body">If you forget your password, please contact admin to reset it!</string>
    <string name="login_reset_error1">Password doesn\'t match!</string>
    <string name="login_reset_error">Cannot find this email !</string>
    <string name="login_nullError">Please provide email and password !</string>
    <string name="reset_password_button">Apply change</string>

    <!-- register -->
    <string name="register_title">Register</string>
    <string name="register_email">Your email</string>
    <string name="register_email_hint">Enter your email here</string>
    <string name="register_password">Password</string>
    <string name="register_password_r">Repeat password</string>
    <string name="register_ok">Register</string>
    <string name="register_change_login">Already have account? Login here</string>
    <string name="register_error">Username cannot be empty!</string>
    <string name="register_info">Register success !</string>
    <string name="register_password_hint">At least 6 characters</string>
    <string name="register_username_hint">Username</string>
    <string name="register_email_occupied">The email address is already in use by another account.</string>
    <string name="register_course_button">Select courses</string>
    <string name="register_course_error">Please choose a course for user!</string>
    <string name="register_role_button">Select role</string>
    <string name="register_role_error">Please choose a role for user!</string>

    <!-- home -->
    <string name="home_title">Home</string>
    <string name="home_search_hint">Search here</string>
    <string name="home_search_button_text">Search</string>

    <!-- both home and login -->
    <string name="exit_toast">Press again to exit the program</string>

    <!-- filter -->
    <string name="filter_text">Filter</string>
    <string name="filter_1">Old to new</string>
    <string name="filter_2">New to old</string>

    <!-- User -->
    <string name="user_title">Other Settings</string>
    <string name="user_item1">Account</string>
    <string name="user_item6">History</string>
    <string name="user_item2">About</string>
    <string name="user_item3">General</string>
    <string name="user_item4">Logout</string>
    <string name="user_item5">Exit</string>
    <string name="user_item_teacher1">Teacher</string>

    <!-- account -->
    <string name="account_update_username">Username :</string>
    <string name="account_update_password_text">Password :</string>
    <string name="account_update_password">Change password</string>
    <string name="account_change">Change</string>
    <string name="account_setOK">Info updated!</string>
    <string name="account_setPasOK">Password updated!</string>
    <string name="account_resetPassword">An email has been sent to your email, please check it and finish reset password.</string>
    <string name="account_update_email_text">Email :</string>
    <string name="account_update_phone_text">Phone :</string>
    <string name="account_update_birth_text">Birthday :</string>
    <string name="account_update_desc_text">Description :</string>
    <string name="description_update_button_text">Change here</string>
    <string name="account_save_text">Save changes</string>
    <string name="account_desc_dialog_title">Description</string>
    <string name="account_pass_origin_d">Origin password</string>

    <!-- about -->
    <string name="about_author" translatable="false">Author email :</string>
    <string name="about_git" translatable="false">Github link :</string>
    <string name="about_copyLink">Link copied to clipboard.</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="setting_title1">Storage</string>
    <string name="cache">Clean temp videos</string>
    <string name="setting_title2">Others</string>
    <string name="about">About</string>
    <string name="about_desc">Why not click here?</string>
    <string name="cache2">Clear cache</string>
    <string name="cache_video_clear_text">Temp files cleared</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Theme</string>

    <!-- Second Preferences -->
    <string name="app_settings">App settings</string>
    <string name="image_setting">Load original images for user icon ?</string>
    <string name="image_setOn">The image will be more explicit but need more time to load.</string>
    <string name="image_setOff">The image will not be as explicit as the original but will save loading time. </string>
    <string name="language_set">Display language</string>

    <!-- themes titles -->
    <string name="settings_theme_title1">Follow system</string>
    <string name="settings_theme_title2">Light</string>
    <string name="settings_theme_title3">Dark</string>

    <!-- upload -->
    <string name="upload_label_nav">Upload</string>
    <string name="upload_imageName">Upload title</string>
    <string name="upload_desc_hint">Write description here</string>
    <string name="upload_course">Course</string>
    <string name="upload_local_title">Choose local file</string>
    <string name="upload_camera_title">Take images from camera</string>
    <string name="upload_upload_title">Upload</string>
    <string name="upload_failed">Upload failed, please check your settings</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_file_error">Image too large !</string>
    <string name="upload_size_error">The file is too large, the preview image will be compressed</string>
    <string name="upload_waiting_dialog_title">Uploading</string>
    <string name="upload_waiting_dialog_message">Please wait</string>
    <string name="upload_delete_file">Remove file</string>
    <string name="upload_video_label">Upload video</string>
    <string name="upload_video_choose">Choose</string>
    <string name="upload_file_label">Upload file (Optional)</string>
    <string name="upload_waiting_label">Uploading, please wait…</string>
    <string name="upload_edit">Edit</string>
    <string name="upload_delete">Remove</string>
    <string name="uploads_list_title">My uploads</string>

    <!-- pop menu -->
    <string name="pop_save">Save image</string>
    <string name="pop_share">Share</string>

    <!-- cache -->
    <string name="cache_title">Cache size is </string>
    <string name="cache_message">This is will take more time when loading images, are you sure?</string>
    <string name="cache_cancel">Not now</string>
    <string name="cache_OK">Cache cleaned.</string>

    <!-- mine -->
    <string name="manage_admin_label">Manage accounts(Only for admin)</string>
    <string name="manage_button_label">Open</string>
    <string name="upload_label">Upload new resources</string>

    <!-- res list -->
    <string name="res_list_label_nav">Recourse list</string>
    <string name="res_detail_label_nav">Detail</string>
    <string name="comment_title_label">Comment</string>
    <string name="comment_hint">Write comment here :-)</string>
    <string name="comment_button">Post comment</string>

    <!-- admin -->
    <string name="add_account_label">Add account</string>
    <string name="change_account_label">Change password</string>
    <string name="account_remove_title">Remove account</string>
    <string name="account_remove_alert">Alert! You are trying to remove an account, are you sure??</string>

    <!-- detail page -->
    <string name="detail_video_label">Video</string>
    <string name="detail_video_play_button">Play video</string>
    <string name="detail_file_label">Other file</string>
    <string name="detail_file_download_button">Download file</string>
    <string name="detail_video_download">Download video</string>
    <string name="detail_remove_dia_title">Remove this video</string>
    <string name="detail_remove_dia_content">Are you sure to remove this video?
     Everything relates with this video will be removed also (include comments)</string>

    <!-- comment -->
    <string name="comment_upload_ok">Comment send!</string>

    <!-- errors -->
    <string name="e_login_timeout">Timeout, please check your network connection</string>
    <string name="e_file_size">Sorry, this APP only supports file within 500MB</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>