<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_map"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.bpr.front2.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_userFragment"
            app:destination="@id/userFragment" />
        <action
            android:id="@+id/action_homeFragment_to_teacherFragment"
            app:destination="@id/teacherFragment" />
        <action
            android:id="@+id/action_homeFragment_to_resListFragment"
            app:destination="@id/resListFragment" />
    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.bpr.front2.home.user.UserFragment"
        android:label="@string/user_title"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_userFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_userFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_userFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.bpr.front2.home.user.AccountFragment"
        android:label="@string/user_item1"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.bpr.front2.home.user.AboutFragment"
        android:label="@string/user_item2"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/teacherFragment"
        android:name="com.bpr.front2.home.user.teacher.TeacherFragment"
        android:label="@string/user_item_teacher1"
        tools:layout="@layout/fragment_teacher" >
        <action
            android:id="@+id/action_teacherFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_teacherFragment_to_uploadResFragment"
            app:destination="@id/uploadResFragment" />
        <action
            android:id="@+id/action_teacherFragment_to_manageAccountFragment"
            app:destination="@id/manageAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/uploadResFragment"
        android:name="com.bpr.front2.home.user.teacher.uploadPage.UploadResFragment"
        android:label="@string/upload_label_nav"
        tools:layout="@layout/fragment_upload_res" >
        <action
            android:id="@+id/action_uploadResFragment_to_teacherFragment"
            app:destination="@id/teacherFragment" />
    </fragment>
    <fragment
        android:id="@+id/resListFragment"
        android:name="com.bpr.front2.home.user.course.resource.ResListFragment"
        android:label="@string/res_list_label_nav"
        tools:layout="@layout/fragment_res_list" >
        <action
            android:id="@+id/action_resListFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_resListFragment_to_resDetailFragment"
            app:destination="@id/resDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/resDetailFragment"
        android:name="com.bpr.front2.home.user.course.resource.ResDetailFragment"
        android:label="@string/res_detail_label_nav"
        tools:layout="@layout/fragment_res_detail" >
        <action
            android:id="@+id/action_resDetailFragment_to_resListFragment"
            app:destination="@id/resListFragment" />
        <action
            android:id="@+id/action_resDetailFragment_to_videoPlayerFragment"
            app:destination="@id/videoPlayerFragment" />
    </fragment>
    <fragment
        android:id="@+id/videoPlayerFragment"
        android:name="com.bpr.front2.home.user.course.resource.VideoPlayerFragment"
        android:label="fragment_video_player"
        tools:layout="@layout/fragment_video_player" >
        <action
            android:id="@+id/action_videoPlayerFragment_to_resDetailFragment"
            app:destination="@id/resDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/manageAccountFragment"
        android:name="com.bpr.front2.home.user.teacher.admin.ManageAccountFragment"
        android:label="fragment_manage_account"
        tools:layout="@layout/fragment_manage_account" >
        <action
            android:id="@+id/action_manageAccountFragment_to_teacherFragment"
            app:destination="@id/teacherFragment" />
        <action
            android:id="@+id/action_manageAccountFragment_to_createAccountFragment"
            app:destination="@id/createAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.bpr.front2.home.user.teacher.admin.CreateAccountFragment"
        android:label="fragment_create_account"
        tools:layout="@layout/fragment_create_account" >
        <action
            android:id="@+id/action_createAccountFragment_to_manageAccountFragment"
            app:destination="@id/manageAccountFragment" />
    </fragment>
</navigation>