<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.user.teacher.TeacherFragment">

    <TextView
        android:id="@+id/account_error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:text="@string/no_authority"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/WhiteSmoke"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WhiteSmoke"
            android:layout_marginHorizontal="10dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingVertical="4dp"
            android:paddingRight="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:gravity="center|left"
                android:text="@string/manage_admin_label"
                android:textSize="20dp" />

            <Button
                android:id="@+id/manage_account_button"
                style="@style/filter_button_style"
                android:layout_weight="1"
                android:background="@drawable/filter_button_shape"
                android:text="@string/manage_button_label"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WhiteSmoke"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingVertical="4dp"
            android:paddingRight="3dp">


            <Button
                android:id="@+id/upload_resources_button"
                style="@style/filter_button_style"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/filter_button_shape"
                android:text="@string/upload_label"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploads_list_title"
            android:layout_marginVertical="10dp"
            android:textSize="20sp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/uploads_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/uploads_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="1" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>



</FrameLayout>