<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.user.ResetPasswordFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:text="@string/login_reset_title"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/password_origin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/login_edit_shape"
            android:drawableLeft="@drawable/login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/account_pass_origin_d"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_new"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/login_edit_shape"
            android:drawableLeft="@drawable/login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_reset_title"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_new_repeat"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/login_edit_shape"
            android:drawableLeft="@drawable/login_password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_reset_title_r"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/red" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center">

            <Button
                android:id="@+id/apply_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_button" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>