<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    tools:context=".home.user.comment.CommentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/comment_title_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/comment_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_hint"
        android:lines="3"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/text_size_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/comment_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="3.0"
        android:numStars="5"
        android:stepSize="0.5" />

    <Button
        android:id="@+id/commit_comment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_button" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/comment_refresh_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="1" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>