<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center|left"
                android:text="@string/account_update_username"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/profileAccountName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center|left"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="Loading..."
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center|left"
                android:text="@string/account_update_email_text"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/profileEmailEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center|left"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="Loading..."
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center|left"
                android:text="@string/account_update_phone_text"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/profilePhoneEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center|left"
                android:singleLine="true"
                android:text="Loading..."
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center|left"
                android:text="@string/account_update_birth_text"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/profileBirthdayText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center|left"
                android:singleLine="true"
                android:textSize="20dp" />

        </LinearLayout>

    <TextView
        android:id="@+id/profileErrorLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:id="@+id/profileOKButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textSize="11sp"
            android:layout_weight="3" />
    </LinearLayout>

</LinearLayout>